# flytekitplugins-dask

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: check-pr-title.yaml  ci-pipeline.yaml  release.yaml
bstadlbauer/flytekitplugins/dask/: config.py  task.py
src/bstadlbauer/flytekitplugins/dask/: __init__.py  config.py  constants.py  task.py
tests/: Dockerfile  conftest.py  end_to_end.py  end_to_end_test.py  unit_test.py  workflows.py
tests/k8s/: flyte-dask-cluster-role-binding.yaml
