[tool.poetry]
name = "bstadlbauer.flytekitplugins-dask"
version = "0.1.0"
description = "A pure Python flytekit plugin to work with dask clusters"
authors = ["Bernhard Stadlbauer <11799671+bstadlbauer@users.noreply.github.com>"]
license = "MIT"
packages = [
    { include = "bstadlbauer", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
dask = {extras = ["distributed"], version = "^2022.7.0"}
dask-kubernetes = "^2022.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.20.0"
pytest-kind = "^21.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
